added AboutScreen skeleton

--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -7,3 +7,5 @@
 "Female\nRange" = "Weibliche\nSpanne";
 "Male\nRange" = "Männliche\nSpanne";
 "Androgynous\nRange" = "Androgyne\nSpanne";
+"Recording" = "Aufnehmen";
+"About" = "Über";
