--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -7,4 +7,6 @@
 "Female\nRange" = "Female\nRange";
 "Male\nRange" = "Male\nRange";
 "Androgynous\nRange" = "Androgynous\nRange";
+"Recording" = "Recording";
+"About" = "About";
 
