--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 
-"Welcome" = "Hey There!\n\nTo properly analyse it, we need about one minute of audio recording of your voice. For this purpose, we’ll provide you with a text of a length approximate to this time frame. Of course you’re free to say anything else, too, as long as it’s in your natural voice.";
+"Welcome" = "Hey There!\n\nTo properly analyse your pitch, we need about one minute of audio recording of your voice. For this purpose, we’ll provide you with a text of a length approximate to this time frame. Of course you’re free to say anything else, too, as long as it’s in your natural voice.";
 "Next" = "Next";
 "Record" = "Record";
 "Cancel" = "Cancel";
@@ -9,4 +9,7 @@
 "Androgynous\nRange" = "Androgynous\nRange";
 "Recording" = "Recording";
 "About" = "About";
+"AboutText" = "Voice Pitch Analyzer\nVersion:%@\n\nBased on the original %@ \n\nCopyright © Carola Nitz";
+"No Samples" = "Not enough samples";
+"No Samples description" = "We couldn't record enough speaking samples from you. Please try again";
 
