change text in infoscreen

--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 
 "Welcome" = "Hallo!\n\nUm deine Stimmlage richtig zu analysieren brauchen wir eine Audioaufnahme deiner Stimme von einer Minute. Zu diesem Zweck geben wir dir einen Text in dieser ungefähren Länge. Natürlich kannst du auch etwas anderes sagen so lange es in deiner natürlichen Stimme ist.";
-"Next" = "Weiter";
+"Gotit" = "Alles klar!";
 "Record" = "Aufnehmen";
 "Caccel" = "Abbrechen";
 "Stop" = "Stop";
@@ -9,6 +9,6 @@
 "Androgynous\nRange" = "Androgyne\nSpanne";
 "Recording" = "Aufnehmen";
 "About" = "Über";
-"AboutText" = "Voice Pitch Analyzer\nVersion:%@\n\n Basierend auf der Version die hier gefunden werden kann https://github.com/purrprogramming/voice-pitch-analyzer/ \n\nCopyright © Carola Nitz";
+"AboutText" = "Voice Pitch Analyzer\nVersion:%@\n\n Basierend auf der original Version https://github.com/purrprogramming/voice-pitch-analyzer/";
 "No Samples" = "Nicht genügend Aufnahmen";
 "No Samples description" = "Wir konnten nicht lange genug aufnehmen. Bitte versuche es noch einmal";
