--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 
 "Welcome" = "Hey There!\n\nTo properly analyse your pitch, we need about one minute of audio recording of your voice. For this purpose, we’ll provide you with a text of a length approximate to this time frame. Of course you’re free to say anything else, too, as long as it’s in your natural voice.";
-"Next" = "Next";
+"Gotit" = "Got it!";
 "Record" = "Record";
 "Cancel" = "Cancel";
 "Stop" = "Stop";
