add the camera usage description key because aparently we're using that 🤷

--- a/de.lproj/InfoPlist.strings
+++ b/de.lproj/InfoPlist.strings
@@ -1,2 +1,3 @@
 
 "NSMicrophoneUsageDescription" = "Um deine Stimme zu analysieren brauchen wir die Erlaubnis für dein Mikrophone";
+"NSCameraUsageDescription" = "Um deine Stimme zu analysieren brauchen wir Zugriff auf die Kamera";
